# epy

./: .build.yml  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/epy_reader/: __main__.py  board.py  cli.py  config.py  models.py  parser.py  reader.py  settings.py  state.py  utils.py
src/epy_reader/ebooks/: epub.py  fictionbook.py
src/epy_reader/speakers/: __init__.py  speechd.py
