[project]
name = "epy-reader"
version = "2023.6.11"
description = "TUI Ebook Reader"
authors = [
    {name = "Benawi Adha", email = "benawiadha@gmail.com"}
]
license = { text = "GPL-3.0" }
readme = "README.md"
keywords = ["ebook", "epub", "epub3", "fb2", "mobi", "azw3", "TUI", "ebook reader"]

requires-python = ">= 3.8"
dependencies = [
    "windows-curses ; platform_system == 'Windows'",
    "standard-imghdr == 3.13.0",
]

[project.urls]
"Homepage" = "https://github.com/wustho/epy"
"Repository" = "https://github.com/wustho/epy"

[project.optional-dependencies]
dev = [
    "pynvim >=0.4.3",
    "black >=22.8.0",
    "coverage >=6.5.0",
    "debugpy >=1.6.3",
    "ipython >=8.5.0",
    "mypy >=0.981",
    "pytest >=7.1.3",
    "isort >=5.10.1",
    "build >=0.8.0",
    "twine >=4.0.1",
]

[project.scripts]
epy = "epy_reader.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict_optional = true
follow_imports = "silent"
exclude = ["src/epy_reader/tools/"]

[tool.black]
line-length = 100
target-version = ['py38']
exclude = "src/epy_reader/tools/"

[tool.isort]
skip = "src/epy_reader/tools/"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
